k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: viacep-api-deployment
spec:
  replicas: 5
  selector:
    matchLabels:
      app: viacep-api
  template:
    metadata:
      labels:
        app: viacep-api
    spec:
      containers:
      - name: viacep-api
        image: carlosdaniel2/viacep
        ports:
        - containerPort: 80
