k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: viacep-service
spec:
  selector:
    app: viacep-api
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30008
  type: NodePort
